array.island.Island.scala.error
Compilation error:
Island:7: error: not found: type a
    if (num[a] < num[b]) {
            ^Island:7: error: value num of type Array[Int] does not take type parameters.
    if (num[a] < num[b]) {
           ^Island:7: error: not found: type b
    if (num[a] < num[b]) {
                     ^Island:7: error: value num of type Array[Int] does not take type parameters.
    if (num[a] < num[b]) {
                    ^